--- a/app/src/main/res/layout/add_photo.xml
+++ b/app/src/main/res/layout/add_photo.xml
@@ -9,6 +9,11 @@
             type="com.example.faithandroid.PostViewModel" />
     </data>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -19,25 +24,25 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-            <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingTop="20dp"
-            android:orientation="vertical"
-            android:layout_marginTop="?attr/actionBarSize">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingTop="20dp"
+                android:orientation="vertical"
+                android:layout_marginTop="?attr/actionBarSize">
 
 
                 <LinearLayout
                     android:id="@+id/linLay1"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:orientation="horizontal"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
-                    <LinearLayout
-                        android:id="@+id/linLay2"
-                    android:layout_width="match_parent"
-                    android:layout_height="80dp"
-                    android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/iconPhoto"
@@ -74,37 +79,56 @@
 
                     </com.google.android.material.textfield.TextInputLayout>
 
-                        <com.google.android.material.textfield.TextInputLayout
-                            android:id="@+id/titleFieldImage"
+
+                </LinearLayout>
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/titleFieldImage"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginEnd="8dp"
+                        android:hint="@string/vul_hier_je_titel_in"
+                        android:visibility="gone"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/linLay1">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/titelImage"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="8dp"
-                            android:layout_marginTop="16dp"
-                            android:layout_marginEnd="8dp"
-                            android:hint="@string/vul_hier_je_titel_in"
-                            android:visibility="gone"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/linLay2">
-
-                            <com.google.android.material.textfield.TextInputEditText
-                                android:id="@+id/titelImage"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:singleLine="true" />
+                            android:singleLine="true" />
 
 
-                        </com.google.android.material.textfield.TextInputLayout>
-                </LinearLayout>
+                    </com.google.android.material.textfield.TextInputLayout>
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/addImageRecyclerView"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        app:TreasurechestlistData="@{viewModel.postList}"
+                        android:layout_width="405dp"
+                        android:layout_height="406dp"
+                        app:TreasurechestlistData="@{viewModel.postListFiltered}"
                         app:spanCount="2"
-                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"></androidx.recyclerview.widget.RecyclerView>
-                </LinearLayout>
-            </FrameLayout>
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/titleFieldImage"
+                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager">
+
+                    </androidx.recyclerview.widget.RecyclerView>
+
+                    <Button
+                        android:layout_gravity="center"
+                        android:id="@+id/fotoToevoegenButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="15dp"
+                        android:text="@string/nieuwe_post_toevoegen"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/addImageRecyclerView" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </FrameLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
