--- a/app/src/main/res/layout/skyscraper_goalpostimage.xml
+++ b/app/src/main/res/layout/skyscraper_goalpostimage.xml
@@ -19,7 +19,7 @@
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:clickable="true"
