--- a/app/src/main/res/layout/treasurechest_post.xml
+++ b/app/src/main/res/layout/treasurechest_post.xml
@@ -15,7 +15,7 @@
             type="com.example.faithandroid.models.PostType" />
     </data>
 
-    
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
@@ -34,7 +34,8 @@
                 android:id="@+id/treasurechestCard"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fadingEdgeLength="10dp">
+                android:fadingEdgeLength="10dp"
+                android:orientation="vertical">
 
                 <!--TEXTPOST-->
                 <LinearLayout
@@ -44,7 +45,7 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginRight="16dp"
                     android:layout_marginBottom="16dp"
-                    android:visibility='@{post.PostType == posttype.Text.ordinal()?View.VISIBLE:View.GONE}'
+
                     android:orientation="vertical">
 
                     <TextView
@@ -64,6 +65,7 @@
                         android:layout_marginTop="5dp"
                         android:layout_weight="1"
                         android:text='@{post.data.length() >= 49? post.data.substring(0, 50) + "...": post.data}'
+                        android:visibility='@{post.PostType == posttype.Text.ordinal()?View.VISIBLE:View.GONE}'
                         android:textColor="@android:color/black" />
                 </LinearLayout>
 
@@ -98,5 +100,7 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
+
+
 
 </layout>
