--- a/app/src/main/res/layout/backpack.xml
+++ b/app/src/main/res/layout/backpack.xml
@@ -62,7 +62,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:TreasurechestlistData="@{viewModel.postList}">
+            app:listData="@{viewModel.postList}">
 
         </androidx.recyclerview.widget.RecyclerView>
     </androidx.constraintlayout.widget.ConstraintLayout>
