--- a/app/src/main/res/layout/treasurechest.xml
+++ b/app/src/main/res/layout/treasurechest.xml
@@ -65,7 +65,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:TreasurechestlistData="@{viewModel.postList}">
+            app:listData="@{viewModel.postList}">
 
         </androidx.recyclerview.widget.RecyclerView>
 
