--- a/app/src/main/res/layout/treasurechest.xml
+++ b/app/src/main/res/layout/treasurechest.xml
@@ -54,12 +54,11 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />-->
         <androidx.recyclerview.widget.RecyclerView
-            android:layout_marginTop="?attr/actionBarSize"
+            android:paddingTop="?attr/actionBarSize"
             android:id="@+id/TreasureChestRecycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clipToPadding="false"
-            android:paddingTop="7dp"
             app:spanCount="1"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintLeft_toLeftOf="parent"
