--- a/app/src/main/res/layout/listdata_post.xml
+++ b/app/src/main/res/layout/listdata_post.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
     
     <data>
         <import type="android.view.View" />
@@ -20,85 +21,133 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <androidx.cardview.widget.CardView
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/card"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
-            app:cardElevation="10dp"
-            app:layout_constraintBottom_toBottomOf="parent">
+            android:layout_height="300dp"
+            android:layout_margin="8dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:checkable="true">
 
             <LinearLayout
-                android:id="@+id/treasurechestCard"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fadingEdgeLength="10dp"
                 android:orientation="vertical">
 
-                <!--TEXTPOST-->
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginRight="16dp"
-                    android:layout_marginBottom="16dp"
-
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/TreasurechestTextTitle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0"
-                        android:text="@{post.title}"
-                        android:textColor="@android:color/black"
-                        android:textSize="24sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/TreasurechestTextContent"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:layout_weight="1"
-                        android:text='@{post.data.length() >= 49? post.data.substring(0, 50) + "...": post.data}'
-                        android:visibility='@{post.PostType == posttype.Text.ordinal()?View.VISIBLE:View.GONE}'
-                        android:textColor="@android:color/black" />
-                </LinearLayout>
-
+                <!-- Media -->
                 <!--Imagepost-->
                 <ImageView
                     android:id="@+id/TreasurechestImage"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="200dp"
                     android:layout_weight="1"
-                    android:visibility='@{post.PostType == posttype.Image.ordinal()?View.VISIBLE:View.GONE}'
                     android:scaleType="centerCrop"
+                    android:visibility='@{post.PostType == posttype.Image.ordinal()?View.VISIBLE:View.GONE}'
+
                     />
 
                 <!--Videopost-->
                 <ImageView
                     android:id="@+id/TreasurechestVideo"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="200dp"
                     android:layout_weight="1"
-                    android:visibility='@{post.PostType == posttype.Video.ordinal()?View.VISIBLE:View.GONE}'
-                    android:src="@drawable/cinema"/>
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/cinema"
+                    android:visibility='@{post.PostType == posttype.Video.ordinal()?View.VISIBLE:View.GONE}' />
 
                 <!--Audiopost-->
                 <ImageView
                     android:id="@+id/TreasurechestAudio"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="200dp"
                     android:layout_weight="1"
-                    android:visibility='@{post.PostType == posttype.Audio.ordinal()?View.VISIBLE:View.GONE}'
-                    android:src="@drawable/sound" />
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/sound"
+                    android:visibility='@{post.PostType == posttype.Audio.ordinal()?View.VISIBLE:View.GONE}' />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:orientation="vertical"
+                    android:padding="16dp">
+
+                    <!-- Title, secondary and supporting text -->
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{post.title}"
+                        android:textAppearance="?attr/textAppearanceHeadline6"
+                        />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:text="@{post.data}"
+                        android:textAppearance="?attr/textAppearanceBody2"
+                        android:textColor="?android:attr/textColorSecondary"
+                        />
+
+                </LinearLayout>
 
             </LinearLayout>
-        </androidx.cardview.widget.CardView>
+
+        </com.google.android.material.card.MaterialCardView>
+
+<!--        <androidx.cardview.widget.CardView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="200dp"-->
+<!--            android:layout_marginLeft="10dp"-->
+<!--            android:layout_marginTop="10dp"-->
+<!--            android:layout_marginRight="10dp"-->
+<!--            android:layout_marginBottom="10dp"-->
+<!--            app:cardElevation="10dp"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent">-->
+
+<!--            <LinearLayout-->
+<!--                android:id="@+id/treasurechestCard"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:fadingEdgeLength="10dp"-->
+<!--                android:orientation="vertical">-->
+
+<!--                &lt;!&ndash;TEXTPOST&ndash;&gt;-->
+<!--                <LinearLayout-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginLeft="16dp"-->
+<!--                    android:layout_marginTop="16dp"-->
+<!--                    android:layout_marginRight="16dp"-->
+<!--                    android:layout_marginBottom="16dp"-->
+
+<!--                    android:orientation="vertical">-->
+
+<!--                    <TextView-->
+<!--                        android:id="@+id/TreasurechestTextTitle"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_weight="0"-->
+<!--                        android:text="@{post.title}"-->
+<!--                        android:textColor="@android:color/black"-->
+<!--                        android:textSize="24sp"-->
+<!--                        android:textStyle="bold" />-->
+
+<!--                    <TextView-->
+<!--                        android:id="@+id/TreasurechestTextContent"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginTop="5dp"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:text='@{post.data.length() >= 49? post.data.substring(0, 50) + "...": post.data}'-->
+<!--                        android:visibility='@{post.PostType == posttype.Text.ordinal()?View.VISIBLE:View.GONE}'-->
+<!--                        android:textColor="@android:color/black" />-->
+<!--                </LinearLayout>-->
+
+
+
+<!--            </LinearLayout>-->
+<!--        </androidx.cardview.widget.CardView>-->
     </LinearLayout>
 
 
