--- a/app/src/main/res/layout/add_text.xml
+++ b/app/src/main/res/layout/add_text.xml
@@ -84,7 +84,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-                    app:listData="@{viewModel.postListFiltered}"
+                    app:filteredPostData="@{viewModel.postListFiltered}"
                     app:spanCount="2">
 
                 </androidx.recyclerview.widget.RecyclerView>
