--- a/app/src/main/res/layout/video_toevoegen.xml
+++ b/app/src/main/res/layout/video_toevoegen.xml
@@ -110,7 +110,7 @@
                     android:layout_width="405dp"
                     android:layout_height="455dp"
                     android:layout_marginTop="16dp"
-                    app:listData="@{viewModel.postListFiltered}"
+                    app:filteredPostData="@{viewModel.postListFiltered}"
                     app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
