--- a/app/src/main/res/layout/filtered_post.xml
+++ b/app/src/main/res/layout/filtered_post.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content">
 
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/card"
+            android:id="@+id/filteredPostCard"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:layout_margin="8dp"
