--- a/app/src/main/res/layout/treasurechest.xml
+++ b/app/src/main/res/layout/treasurechest.xml
@@ -40,6 +40,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize"
         >
 
 
@@ -54,7 +55,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />-->
         <androidx.recyclerview.widget.RecyclerView
-            android:paddingTop="?attr/actionBarSize"
             android:id="@+id/TreasureChestRecycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
