--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -102,19 +102,26 @@
         android:label="text_post_toevoegen">
         <action
             android:id="@+id/action_text_post_toevoegen_to_optionsAddPostFragment"
-            app:destination="@id/optionsAddPostFragment" />
+            app:destination="@id/optionsAddPostFragment"
+            app:popUpToInclusive="true" />
         <argument
             android:name="placeType"
             app:argType="com.example.faithandroid.PlaceType" />
         <action
             android:id="@+id/action_text_post_toevoegen_to_bulletinBoardFragment"
-            app:destination="@id/bulletinBoardFragment" />
+            app:destination="@id/bulletinBoardFragment"
+            app:popUpTo="@id/bulletinBoardFragment"
+            app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_text_post_toevoegen_to_backpackFragment"
-            app:destination="@id/backpackFragment" />
+            app:destination="@id/backpackFragment"
+            app:popUpTo="@id/backpackFragment"
+            app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_text_post_toevoegen_to_treasureChestFragment"
-            app:destination="@id/treasureChestFragment" />
+            app:destination="@id/treasureChestFragment"
+            app:popUpTo="@id/treasureChestFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/backpackFragment"
@@ -164,7 +171,8 @@
         tools:layout="@layout/treasurechest">
         <action
             android:id="@+id/action_treasureChestFragment_to_optionsAddPostFragment"
-            app:destination="@id/optionsAddPostFragment" />
+            app:destination="@id/optionsAddPostFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/addGoalFragment"
@@ -204,7 +212,19 @@
             app:argType="com.example.faithandroid.PlaceType" />
         <action
             android:id="@+id/action_videoToevoegenFragment_to_bulletinBoardFragment"
-            app:destination="@id/bulletinBoardFragment" />
+            app:destination="@id/bulletinBoardFragment"
+            app:popUpTo="@id/bulletinBoardFragment"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_videoToevoegenFragment_to_backpackFragment"
+            app:destination="@id/backpackFragment"
+            app:popUpTo="@id/backpackFragment"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_videoToevoegenFragment_to_treasureChestFragment"
+            app:destination="@id/treasureChestFragment"
+            app:popUpTo="@id/treasureChestFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/addPhotoFragment"
@@ -215,19 +235,19 @@
             app:argType="com.example.faithandroid.PlaceType" />
         <action
             android:id="@+id/action_addPhotoFragment_to_bulletinBoardFragment"
-            app:destination="@id/bulletinBoardFragment" />
-        <action
-            android:id="@+id/action_addPhotoFragment_to_backpackFragment"
-            app:destination="@id/backpackFragment" />
-        <action
-            android:id="@+id/action_addPhotoFragment_to_skyscraperFragment"
-            app:destination="@id/skyscraperFragment" />
-        <action
-            android:id="@+id/action_addPhotoFragment_to_backpackFragment2"
-            app:destination="@id/backpackFragment" />
+            app:destination="@id/bulletinBoardFragment"
+            app:popUpTo="@id/bulletinBoardFragment"
+            app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_addPhotoFragment_to_treasureChestFragment"
-            app:destination="@id/treasureChestFragment" />
+            app:destination="@id/treasureChestFragment"
+            app:popUpTo="@id/treasureChestFragment"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_addPhotoFragment_to_backpackFragment"
+            app:destination="@id/backpackFragment"
+            app:popUpTo="@id/backpackFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/addTextFragment"
@@ -235,13 +255,25 @@
         android:label="addTextFragment" >
         <action
             android:id="@+id/action_addTextFragment_to_text_post_toevoegen"
-            app:destination="@id/text_post_toevoegen" />
+            app:destination="@id/text_post_toevoegen"
+            app:popUpToInclusive="true" />
         <argument
             android:name="placeType"
             app:argType="com.example.faithandroid.PlaceType" />
         <action
             android:id="@+id/action_addTextFragment_to_bulletinBoardFragment"
-            app:destination="@id/bulletinBoardFragment" />
+            app:destination="@id/bulletinBoardFragment"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_addTextFragment_to_backpackFragment"
+            app:destination="@id/backpackFragment"
+            app:popUpTo="@id/backpackFragment"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_addTextFragment_to_treasureChestFragment"
+            app:destination="@id/treasureChestFragment"
+            app:popUpTo="@id/treasureChestFragment"
+            app:popUpToInclusive="true" />
 
     </fragment>
 
