steps laten weergeven bij nieuwe goal + datum weergeven : af

--- a/app/src/main/res/layout/skyscraper_goaldetails.xml
+++ b/app/src/main/res/layout/skyscraper_goaldetails.xml
@@ -50,6 +50,13 @@
                     android:text="Titel:"
                     android:textAlignment="center"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+                <TextView
+                    android:id="@+id/datumText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Datum:"
+                    android:textAlignment="viewEnd" />
 
             </LinearLayout>
 
