--- a/app/src/main/res/layout/skyscraper.xml
+++ b/app/src/main/res/layout/skyscraper.xml
@@ -32,6 +32,7 @@
             app:srcCompat="@android:drawable/ic_input_add" />
 
         <ScrollView
+            android:layout_marginTop="?attr/actionBarSize"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent">
