--- a/app/src/main/res/layout/skyscraper_add_goal.xml
+++ b/app/src/main/res/layout/skyscraper_add_goal.xml
@@ -138,7 +138,7 @@
 
         <Button
             android:id="@+id/annuleerButton"
-            android:layout_width="wrap_content"
+            android:layout_width="130dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="14dp"
             android:text="@string/annuleren"
@@ -149,11 +149,11 @@
 
         <Button
             android:id="@+id/voegToeButton"
-            android:layout_width="wrap_content"
+            android:layout_width="130dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="68dp"
             android:layout_marginBottom="14dp"
             android:text="@string/add_new_goal"
+            android:layout_marginRight="45dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
