--- a/app/src/main/res/layout/add_new_text.xml
+++ b/app/src/main/res/layout/add_new_text.xml
@@ -11,7 +11,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".TextPostToevoegenFragment">
+        tools:context=".post.text.TextPostToevoegenFragment">
 
         <include
             layout="@layout/app_bar_back"
