--- a/app/src/main/res/layout/add_photo.xml
+++ b/app/src/main/res/layout/add_photo.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.faithandroid.PostViewModel" />
+            type="com.example.faithandroid.post.PostViewModel" />
     </data>
 
 
