--- a/app/src/main/res/layout/skyscraper_goalpostimage.xml
+++ b/app/src/main/res/layout/skyscraper_goalpostimage.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
+
+     <variable
+        name="goal"
+        type="com.example.faithandroid.models.GoalPost" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clickable="true">
+
 
     <ImageView
         android:id="@+id/bellySkyscraper"
@@ -26,11 +36,12 @@
         android:layout_height="wrap_content"
         android:layout_margin="6dp"
         android:clickable="true"
+        app:cardBackgroundColor="@{goal.completed ? @android:color/darker_gray:  @android:color/holo_red_dark}"
         app:layout_constraintBottom_toBottomOf="@+id/bellySkyscraper"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/bellySkyscraper"
-       >
+        >
 
         <LinearLayout
             android:id="@+id/layout"
@@ -38,6 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="true"
+
             android:gravity="center"
             android:orientation="vertical"
             android:paddingLeft="7dp"
@@ -47,13 +59,13 @@
 
             <!-- Title, secondary and supporting text -->
             <TextView
-
                 android:id="@+id/titleText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="DummyText"
                 android:textAppearance="?attr/textAppearanceHeadline6"
+
                 android:textSize="16dp" />
             <!--<TextView
                     android:id="@+id/description"
@@ -70,3 +82,4 @@
 
     </com.google.android.material.card.MaterialCardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
