--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#F8A59E</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="darkGray">#444444</color>
+    <color name="okGreen">#A1D686</color>
 </resources>
