buttons geïmplementeerd (toevoegen nog niet)

--- a/app/src/main/res/layout/add_post.xml
+++ b/app/src/main/res/layout/add_post.xml
@@ -56,9 +56,7 @@
                                 style="@style/buttonStyle"
                                 android:layout_width="137dp"
                                 android:layout_height="72dp"
-                                android:clickable="false"
-                                android:text="@string/audio"
-                                android:textColor="#9E9797"/>
+                                android:text="@string/audio" />
 
                             <Button
                                 android:id="@+id/FotoButton"
