--- a/app/src/main/res/layout/skyscraper.xml
+++ b/app/src/main/res/layout/skyscraper.xml
@@ -12,27 +12,11 @@
             android:id="@+id/include3"
             layout="@layout/app_bar_back"
             android:layout_width="match_parent"
-            android:layout_height="53dp" />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/AddPostButton"
-            style="@style/pinkButtonStyle"
-            android:layout_width="70dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_gravity="bottom|end"
-            android:layout_marginEnd="25dp"
-            android:layout_marginBottom="25dp"
-            android:clickable="true"
-            android:elevation="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:maxImageSize="45dp"
-            app:srcCompat="@android:drawable/ic_input_add" />
+            android:layout_height="53dp"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ScrollView
-            android:layout_marginTop="?attr/actionBarSize"
+            android:id="@+id/scrollView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent">
@@ -60,6 +44,22 @@
 
             </LinearLayout>
         </ScrollView>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/AddPostButton"
+            style="@style/pinkButtonStyle"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="bottom|end"
+            android:layout_marginEnd="25dp"
+            android:layout_marginBottom="25dp"
+            android:clickable="true"
+            android:elevation="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:maxImageSize="45dp"
+            app:srcCompat="@android:drawable/ic_input_add" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
