--- a/app/src/main/res/layout/shoppingcenter.xml
+++ b/app/src/main/res/layout/shoppingcenter.xml
@@ -2,6 +2,12 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name="ShoppingCenterViewModel"
+            type="com.example.faithandroid.shoppingCenter.ShoppingCenterViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -67,8 +73,11 @@
                 android:orientation="vertical" >
 
                 <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/shoppingCenterGridView"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    app:AvatarParts="@{ShoppingCenterViewModel.data}"
+                    />
             </LinearLayout>
         </HorizontalScrollView>
 
