--- a/app/src/main/res/layout/bulletinboard.xml
+++ b/app/src/main/res/layout/bulletinboard.xml
@@ -16,6 +16,7 @@
 
         <include
             layout="@layout/app_bar_back"
+            android:id="@+id/include"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
