poppen van fragementlayouts wolkenkrabber: af, app bar go back wordt weergeven

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -160,12 +160,10 @@
         <action
             android:id="@+id/action_skyscraperFragment_to_addGoalFragment"
             app:destination="@id/addGoalFragment"
-            app:popUpTo="@+id/skyscraperFragment"
             app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_skyscraperFragment_to_goalDetailsFragment"
             app:destination="@id/goalDetailsFragment"
-            app:popUpTo="@+id/skyscraperFragment"
             app:popUpToInclusive="true" />
     </fragment>
     <fragment
@@ -184,7 +182,9 @@
         android:label="addGoalFragment" >
         <action
             android:id="@+id/action_addGoalFragment_to_skyscraperFragment"
-            app:destination="@id/skyscraperFragment" />
+            app:destination="@id/skyscraperFragment"
+            app:popUpTo="@id/skyscraperFragment"
+            app:popUpToInclusive="true"/>
     </fragment>
     <fragment
         android:id="@+id/goalDetailsFragment"
