--- a/app/src/main/res/layout/skyscraper.xml
+++ b/app/src/main/res/layout/skyscraper.xml
@@ -2,24 +2,29 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <include layout="@layout/app_bar_back"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#c4ebff">
+        android:background="#c4ebff"
+        android:layout_marginTop="?attr/actionBarSize">
 
-        <include
-            android:id="@+id/include3"
-            layout="@layout/app_bar_back"
-            android:layout_width="match_parent"
-            android:layout_height="54dp"
-            app:layout_constraintTop_toTopOf="parent" />
+
 
         <ScrollView
             android:id="@+id/scrollView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintBottom_toBottomOf="parent"
+            >
 
             <LinearLayout
                 android:id="@+id/lijst"
@@ -27,7 +32,9 @@
                 android:layout_height="wrap_content"
                 android:background="#C2EBFF"
                 android:gravity="bottom"
-                android:orientation="vertical">
+                android:orientation="vertical"
+
+                >
 
                 <ImageView
                     android:id="@+id/bovenkantSkyscraper"
@@ -62,4 +69,5 @@
             app:srcCompat="@android:drawable/ic_input_add" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
 </layout>
